<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">All Random</string>
    <string name="action_settings">Settings</string>
    <string name="result_txt">Result:</string>
    <string name="default_result">_</string>
    <string name="roll_dice">Roll dice</string>
    <string name="clear">Clear</string>
    <string name="number">Number</string>
    <string name="coin">Heads or Tails</string>
    <string name="dice">Dice</string>
    <string name="lottery">Lottery</string>
    <string name="icon_desc"></string>
    <string name="title_activity_generate_number">Random Number</string>
    <string name="hello_world">Hello world!</string>
    <string name="min_lbl">min </string>
    <string name="max_lbl">max </string>
    <string name="range">Range:</string>
    <string name="generate">Generate</string>
    <string name="title_activity_generate_dice">Roll Dice</string>
    <string name="title_activity_generate_coin">Heads or Tails</string>
    <string name="toss_coin">Toss</string>
    <string name="head">head</string>
    <string name="tail">tail</string>
    <string name="title_activity_lottery">Lottery</string>
    <string name="nums_txt">Numbers: </string>
    <string name="star_txt">Stars: </string>
    <string name="card">Cards</string>
    <string name="bingo">Bingo</string>
    <string name="title_activity_generate_card">Cards</string>
    <string name="title_activity_generate_bingo">Bingo</string>
    <string name="draw_card">Draw Card</string>
    <string name="next_number">Next Number</string>
    <string name="reset">Reset</string>
    <string name="title_activity_settings">Settings</string>
    <string name="repeat_results_lbl">Repeat results (cards only)</string>
    <string name="user_properties">pt.allrandom.androidui.USER_PROPERTIES</string>
    <string name="repeat_state_key">pt.allrandom.androidui.REPEAT_MODE</string>
    <string name="overflow">Overflow: Max value </string>

</resources>
