<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GenerateNumberActivity" >

    <EditText
        android:id="@+id/min_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/min_id"
        android:layout_toRightOf="@+id/range_id"
        android:ems="10"
        android:hint="@string/min_lbl"
        android:inputType="number"
        android:maxLines="0"
        android:textColor="@android:color/white" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/max_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/min_id"
        android:layout_below="@+id/min_edit"
        android:layout_marginTop="18dp"
        android:text="@string/max_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/max_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/max_id"
        android:layout_alignBottom="@+id/max_id"
        android:layout_alignLeft="@+id/min_edit"
        android:layout_alignRight="@+id/min_edit"
        android:ems="10"
        android:hint="@string/max_lbl"
        android:inputType="number"
        android:maxLines="0"
        android:textColor="@android:color/white" >
    </EditText>

    <TextView
        android:id="@+id/range_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/range"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/min_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/range_id"
        android:layout_below="@+id/range_id"
        android:layout_marginTop="20dp"
        android:text="@string/min_lbl"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/result_numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/result_id"
        android:layout_alignBottom="@+id/result_id"
        android:layout_centerHorizontal="true"
        android:text="@string/default_result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/result_numb"
        android:layout_alignBottom="@+id/result_numb"
        android:layout_alignParentRight="true"
        android:onClick="clear"
        android:text="@string/clear"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/result_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/max_edit"
        android:layout_marginTop="40dp"
        android:text="@string/result_txt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/generate_number_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="generateNumber"
        android:text="@string/generate"
        android:textColor="@android:color/white" />

</RelativeLayout>