<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LotteryActivity" >

    <TextView
        android:id="@+id/star_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/num_id"
        android:layout_below="@+id/num_id"
        android:layout_marginTop="14dp"
        android:text="@string/star_txt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/result_lottery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/star_id"
        android:layout_marginLeft="20dp"
        android:gravity="left"
        android:layout_toRightOf="@+id/num_id"
        android:text="@string/default_result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/result_star_lottery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_alignBaseline="@+id/star_id"
        android:layout_alignBottom="@+id/star_id"
        android:layout_alignLeft="@+id/result_lottery"
        android:text="@string/default_result"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/star_id"
        android:layout_marginTop="18dp"
        android:onClick="clear"
        android:text="@string/clear"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/num_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/nums_txt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/generate_lottery_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="generateTicket"
        android:text="@string/generate"
        android:textColor="@android:color/white" />

</RelativeLayout>